--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -106,10 +106,11 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
 
+    - name: Install Gosec
+      run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
     - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
-      with:
-        args: '-no-fail -fmt sarif -out results.sarif ./...'
+      run: ~/go/bin/gosec -no-fail -fmt sarif -out results.sarif ./...
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
@@ -134,7 +135,7 @@ jobs:
       run: make build
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: tsq-binary
         path: bin/tsq
